--- a/LightReading/Info.plist
+++ b/LightReading/Info.plist
@@ -22,6 +22,8 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>App需要您的同意,才能访问相机</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>App需要您的同意,才能访问相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
